--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -86,6 +86,13 @@
                     android:layout_height="match_parent"
                     android:layout_margin="10dp" />
 
+                <include
+                    android:id="@+id/empty_layout"
+                    layout="@layout/empty_message_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:visibility="gone" />
+
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
