--- a/app/src/main/res/layout/adapter_categories.xml
+++ b/app/src/main/res/layout/adapter_categories.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/layout"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -15,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
-            android:padding="20dp"
+            android:padding="40dp"
             android:background="@color/colorPrimaryDark"
             android:orientation="vertical">
 
