--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#FF8848</color>
+    <color name="colorPrimaryDark">#F47836</color>
     <color name="colorAccent">#444747</color>
     <color name="textColorWhite">#FFFFFF</color>
 </resources>
