finish make checkout activity

--- a/app/src/main/res/layout/empty_message_layout.xml
+++ b/app/src/main/res/layout/empty_message_layout.xml
@@ -27,7 +27,7 @@
             android:gravity="center"
             android:text="oops something wrong happend"
             android:textAlignment="center"
-            android:textColor="@android:color/holo_red_light"
+            android:textColor="@color/textColorRed"
             android:textSize="18sp" />
 
         <TextView
