--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -293,6 +293,13 @@
     </FrameLayout>
 
     <include
+        android:id="@+id/loading_layout"
+        layout="@layout/loading_data_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:visibility="gone" />
+
+    <include
         android:id="@+id/error_layout"
         layout="@layout/error_message_layout"
         android:layout_width="match_parent"
