--- a/app/src/main/res/layout/adapter_product.xml
+++ b/app/src/main/res/layout/adapter_product.xml
@@ -46,13 +46,14 @@
                     android:textStyle="bold" />
 
                 <LinearLayout
+                    android:gravity="bottom"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/description_product_textview"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
                         android:layout_weight="1"
@@ -61,19 +62,30 @@
                         android:textSize="16sp" />
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:layout_margin="10dp"
-                        app:cardCornerRadius="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="15dp"
+                        android:layout_marginRight="15dp"
+                        android:layout_marginEnd="15dp"
+                        android:layout_marginBottom="15dp"
                         app:cardPreventCornerOverlap="false"
                         app:cardUseCompatPadding="true">
 
-                        <ImageView
-                            android:id="@+id/add_to_card_imageview"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scaleType="centerInside"
-                            app:srcCompat="@drawable/add_to_cart" />
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/add_to_card_imageview"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_margin="5dp"
+                                android:scaleType="center"
+                                app:srcCompat="@drawable/add_to_cart" />
+
+                        </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
 
