--- a/app/src/main/res/layout/loading_data_layout.xml
+++ b/app/src/main/res/layout/loading_data_layout.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:elevation="2dp"
@@ -19,12 +17,13 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="50dp"
-            android:indeterminateTint="@color/colorPrimaryDark" />
+            android:backgroundTint="@color/colorPrimaryDark" />
 
         <TextView
             android:id="@+id/loading_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/textColorWhite"
             android:textSize="18sp" />
 
     </LinearLayout>
