--- a/app/src/main/res/layout/activity_carts.xml
+++ b/app/src/main/res/layout/activity_carts.xml
@@ -47,11 +47,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/carts_recycleview"
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/cart_scrollview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp" />
+            tools:visibility="visible">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/carts_recycleview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:orientation="vertical" />
+
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
 
         <include
             android:id="@+id/empty_layout"
@@ -100,7 +120,7 @@
                     android:gravity="left|center"
                     android:text="@string/total"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/total_checkout_text_view"
@@ -111,7 +131,7 @@
                     android:gravity="left|center"
                     android:text="Rp 6000"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="24sp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <Button
