--- a/app/src/main/res/layout/loading_data_layout.xml
+++ b/app/src/main/res/layout/loading_data_layout.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="50dp"
-            android:backgroundTint="@color/colorPrimaryDark" />
+            android:indeterminateTint="@color/colorPrimaryDark" />
 
         <TextView
             android:id="@+id/loading_message"
