add format decimal for total & loading for transaction

--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -45,6 +45,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/transaction_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -68,7 +69,7 @@
                 android:id="@+id/total_payment_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Rp. 5000"
+                android:text="Rp. -"
                 android:textColor="@color/textColorGreen"
                 android:textSize="24sp" />
 
@@ -145,5 +146,21 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <include
+        android:id="@+id/loading_layout"
+        layout="@layout/loading_data_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:visibility="gone" />
+
+    <include
+        android:id="@+id/error_layout"
+        layout="@layout/error_message_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:visibility="gone" />
+
+
 
 </LinearLayout>
