--- a/app/src/main/res/layout/activity_login_or_register.xml
+++ b/app/src/main/res/layout/activity_login_or_register.xml
@@ -11,8 +11,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,7 +59,7 @@
                 app:cardCornerRadius="20dp"
                 app:cardPreventCornerOverlap="false"
                 app:cardUseCompatPadding="true"
-                tools:visibility="gone">
+                tools:visibility="visible">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -88,7 +87,7 @@
                         android:id="@+id/register_name_edittext"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
+                        android:layout_marginBottom="20dp"
                         android:ems="10"
                         android:hint="@string/name"
                         android:inputType="textPersonName"
@@ -98,7 +97,7 @@
                         android:id="@+id/register_email_edittext"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
+                        android:layout_marginBottom="20dp"
                         android:ems="10"
                         android:hint="@string/email"
                         android:inputType="textEmailAddress"
@@ -108,7 +107,7 @@
                         android:id="@+id/register_password_edittext"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
+                        android:layout_marginBottom="20dp"
                         android:ems="10"
                         android:hint="@string/password"
                         android:inputType="textPassword"
@@ -118,23 +117,19 @@
                         android:id="@+id/confirm_password_edittext"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
                         android:ems="10"
                         android:hint="@string/confirm_password"
                         android:inputType="textPassword"
                         android:textColorHint="@color/colorPrimary" />
 
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:orientation="vertical" />
-
                     <Button
                         android:id="@+id/register_button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
+                        android:layout_marginTop="60dp"
+                        android:layout_marginBottom="20dp"
                         android:background="@drawable/rounded_shape_3"
                         android:minHeight="40dp"
                         android:paddingStart="20dp"
@@ -184,7 +179,7 @@
                 app:cardCornerRadius="20dp"
                 app:cardPreventCornerOverlap="false"
                 app:cardUseCompatPadding="true"
-                tools:visibility="visible">
+                tools:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -210,7 +205,7 @@
                         android:id="@+id/login_email_edittext"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
+                        android:layout_marginBottom="20dp"
                         android:ems="10"
                         android:hint="@string/email"
                         android:inputType="textEmailAddress"
@@ -220,23 +215,18 @@
                         android:id="@+id/login_password_edittext"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
                         android:ems="10"
                         android:hint="@string/password"
                         android:inputType="textPassword"
                         android:textColorHint="@color/colorPrimary" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:orientation="vertical" />
 
                     <Button
                         android:id="@+id/login_button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
+                        android:layout_marginTop="60dp"
+                        android:layout_marginBottom="20dp"
                         android:background="@drawable/rounded_shape_3"
                         android:minHeight="40dp"
                         android:paddingStart="20dp"
