--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -67,10 +67,12 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/nav_menu_layout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:visibility="invisible">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -84,7 +86,8 @@
                     android:layout_margin="1dp"
                     android:minHeight="150dp"
                     android:orientation="vertical"
-                    android:padding="10dp">
+                    android:padding="10dp"
+                    tools:visibility="visible">
 
                     <TextView
                         android:id="@+id/nav_menu_profile_textview"
